+ added the concept of constraint profiles
+ added polish translation of the constraint violation messages (thanks to szymon_eu)
* ConstraintsViolatedException.getMessage() now returns the message of the first constraint violation (thanks to szymon_eu)
+ added Guard.setExceptionTranslator() allowing you to change the type of exception that is thrown on constraint violations 

Refactoring:
* net.sf.oval.constraints.NoSelfReference: renamed @NotSelfRef to @NoSelfReference
* net.sf.oval.Constraint: moved from package net.sf.oval.annotations
* net.sf.oval.constraints.ConstraintSet: renamed from net.sf.oval.annotations.DefineConstraintSet
* everything related to programming by contract has been moved into a new net.sf.oval.guard package
  * net.sf.oval.ParamenterNameResolverAspectJImpl: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.ApiUsageAuditor: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.ApiUsageAuditor2: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.ConstraintsViolatedException: moved from package net.sf.oval.exceptions
  * net.sf.oval.guard.GuardAspect: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.GuardAspect2: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.Guarded: moved from package net.sf.oval.guard
  * net.sf.oval.guard.IsGuarded: moved from package net.sf.oval
  * net.sf.oval.guard.PostValidateThis: moved from package net.sf.oval.annotations
  * net.sf.oval.guard.PreValidateThis: moved from package net.sf.oval.annotations
* replaced everything related to Guard.ReportingMode with Guard.isInProbeMode and Guard.setInProbeMode

2006-12-10 v0.8
===============
+ added JPAAnnotationsConfigurer to translate EJB3 JPA annotations into OVal constraints
	@javax.persistence.Basic(optional=false)      => @net.sf.oval.constraints.NotNull
	@javax.persistence.OneToOne(optional=false)   => @net.sf.oval.constraints.NotNull