@@ -1,3 +1,0 @@
-#Thu Jan 25 15:18:30 CET 2007
-eclipse.preferences.version=1
-encoding//src/net/sf/oval/constraints/Messages_pl.properties=UTF-8
